--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.2.4",
+        "@supabase/supabase-js": "^2.91.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "lucide-react": "^0.300.0",
