--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@google-cloud/text-to-speech": "^6.4.0",
         "@radix-ui/react-slot": "^1.2.4",
         "@supabase/supabase-js": "^2.91.1",
         "class-variance-authority": "^0.7.0",
@@ -26,6 +27,7 @@
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
+        "@vercel/node": "^5.5.28",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.55.0",
